--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "illuminate/support": "4.2.*",
-        "illuminate/filesystem": "4.2.*",
-        "symfony/yaml": "2.5.*"
+        "illuminate/support": "~5.0",
+        "illuminate/filesystem": "~5.0",
+        "symfony/yaml": "2.6.*"
     },
     "require-dev": {
         "phpspec/phpspec": "~2.0"
