--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "php": ">=5.5.9",
         "illuminate/support": "~5.0",
         "illuminate/filesystem": "~5.0",
-        "symfony/yaml": "3.0.*"
+        "symfony/yaml": "^3.0"
     },
     "require-dev": {
         "phpspec/phpspec": "~2.0"
