--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,15 @@
         }
     ],
     "require": {
-	"php": ">=5.6.4",
-        "illuminate/contracts": "5.4.*",
-        "illuminate/support": "5.4.*",
-        "illuminate/filesystem": "5.4.*",
-        "symfony/yaml": "^3.0"
+	    "php": ">=7.0",
+        "illuminate/contracts": "5.5.*|5.6.*",
+        "illuminate/support": "5.5.*|5.6.*",
+        "illuminate/filesystem": "5.5.*|5.6.*",
+        "symfony/yaml": "^3.0|^4.0"
     },
     "require-dev": {
-        "laravel/laravel": "5.4.*",
-        "phpspec/phpspec": "~2.0"
+        "orchestra/testbench": "3.5.*|3.6.*",
+        "phpspec/phpspec": "^3.0|^4.0"
     },
     "autoload": {
         "psr-4": {
