--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,14 @@
     "extra": {
         "branch-alias": {
             "dev-develop": "3.x-dev"
+        },
+        "laravel": {
+            "providers": [
+                "\\Jameswmcnab\\ConfigYaml\\ConfigYamlServiceProvider"
+            ],
+            "aliases": {
+                "ConfigYaml": "\\Jameswmcnab\\ConfigYaml\\Facades\\ConfigYaml"
+            }
         }
     },
     "suggest": {
